Fix spacing of benefits sections using minus margins, unfortunately. Update content in benefits section

--- a/resources/style.css
+++ b/resources/style.css
@@ -32,8 +32,13 @@ h3 {
   color: white;
 }
 
-/* rule for cover section of website */
-/* this affects the text portion of the cover sectio*/
+/*rules for the navigation & menu bar */
+.kid {
+  display: inline-flex;
+}
+
+/* rules for cover section of website */
+/* this affects the text portion of the cover section*/
 .cover {
   display: flex;
   align-items: center;
@@ -57,19 +62,30 @@ h3 {
   z-index: -1;
 }
 
+/* Rules for the benefits section */
 .benefits {
   height: 40rem;
   background-color: palegoldenrod;
-  display: flex;
+  padding: 8rem 4rem;
+  margin: 0px -15px;
 }
 
-
-.kid {
-  display: inline-flex;
-}
-
-.icon {
+.icon, .vector {
   display: flex;
   justify-content: center;
+  align-items: center;
+
+  height: 100px;
+  border: red 2px solid;
+}
+
+.vector img {
+  width: 60px;
+  height: 60px;
+}
+
+.benefits h4{
+  margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 
